--- a/NardeLbl_designer.ui
+++ b/NardeLbl_designer.ui
@@ -215,8 +215,17 @@
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="lbl_display">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="mouseTracking">
           <bool>true</bool>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::StrongFocus</enum>
          </property>
          <property name="text">
           <string/>
@@ -225,7 +234,7 @@
           <pixmap>../OneDrive/Desktop/dev/T.jpg</pixmap>
          </property>
          <property name="scaledContents">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <property name="alignment">
           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
